--- a/Day5/Office/css/styles.css
+++ b/Day5/Office/css/styles.css
@@ -194,6 +194,7 @@ h1 {
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  margin: 6rem ;
 }
 .form-control {
   border-radius: 0.5rem;
